# rri-ai

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  TODO.md  constants.ts  context.ts  mprocs.yaml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts
components/: Dice.tsx  Error.tsx  Grid.module.css  Grid.tsx  Page.tsx  RouteComponent.tsx  RouteDefinitions.tsx
components/core/: Page.tsx
components/game/: Dice.tsx  DiceButton.tsx  Grid.tsx
components/inputs/: Button.tsx  NumberInput.tsx
components/routes/: HighwayFour.tsx  HighwayStraight.tsx  HighwayT.tsx  HighwayTurn.tsx  Overpass.tsx  RailwayFour.tsx  RailwayStraight.tsx  RailwayT.tsx  RailwayTurn.tsx  StationFourStraight.tsx  StationFourTurn.tsx  StationHighwayT.tsx  StationRailwayT.tsx  StationStraight.tsx  StationTurn.tsx  defaultProps.ts
debugData/: index.ts
hooks/: useComponentWillMount  useComponentWillMount.ts  useDispatch.ts  useSelector.ts  useStore.ts  useStoreState.ts
pages/: 404.tsx  Home.module.css  _app.tsx  game.tsx  index.tsx
pages/api/: newGame.ts  (+1 more)
server/: dice.ts  state.ts
src/: actions.rs  agent.rs  constants.ts  context.ts  districts.rs  game.rs  lib.rs  lobby.rs  logger.rs  main.rs  museum.rs  neat.rs  random.rs  roles.rs  routes.rs  rri.rs  sqlite.rs  templates.rs  types.rs  types.ts
store/: game.ts  index.ts  next.ts
stores/: utils.ts
styles/: Game.module.css  Home.module.css  tailwind.css  tailwind.output.css  tailwind.source.css
templates/: defs.html  exits.html  grid-lines.html  index.html
(+65 files in other folders)
