[package]
name = "railroad-inc"
edition = "2021"
default-run = "railroad-inc"

[[bin]]
name = "railroad-inc"
path = "src/main.rs" 

[[bin]]
name = "sqlite"
path = "src/bins/reset_db.rs"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["cookie-private"] }
futures = "0.3.30"
http = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
uuid = { version = "1.6.1", features = ["v4"] }
macros = { path = "./macros"}
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
serde = { version = "1.0.195", features = ["derive","rc"] }
dotenv = "0.15.0"
axum-core = "0.4.3"
mime = "0.3.17"
serde_with = "3.5.0"

[features]
dev = []
dotenv = []

# https://old.reddit.com/r/rust/comments/gvrgca/this_is_a_neat_trick_for_getting_good_runtime/
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
